--- a/package.json
+++ b/package.json
@@ -1,1 +1,35 @@
-{"name":"big-data-sort","version":"1.0.0","description":"","main":"index.js","publishConfig":{"access":"public"},"scripts":{},"devDependencies":{"@commitlint/config-conventional":"^8.1.0","@types/jest":"^24.0.23","commitlint":"^8.1.0","husky":"^3.0.1","ts-jest":"^24.2.0","tslib":"^1.10.0","jest":"^24.9.0","typescript":"^3.7.2"},"commitlint":{"extends":["@commitlint/config-conventional"]},"husky":{"hooks":{"commit-msg":"commitlint -E HUSKY_GIT_PARAMS"}},"files":["dist/","*.md"]}
+{
+  "name": "big-data-sort",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {},
+  "devDependencies": {
+    "@commitlint/config-conventional": "^8.1.0",
+    "@types/jest": "^24.0.23",
+    "commitlint": "^8.1.0",
+    "husky": "^3.0.1",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.2.0",
+    "ts-node": "^8.5.4",
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.3"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "files": [
+    "dist/",
+    "*.md"
+  ]
+}
