--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "esModuleInterop": true,
     "module": "commonjs",
     "rootDir": "src",
-    "outDir": "dist",
+    "sourceMap": true,
+    "outDir": "out",
     "types": ["node"]
   }
 }
